[package]
name = "example"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.0", features = [
    "esp32c3",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-println = { version = "0.9.0", features = ["esp32c3"] }
embedded-io-async = { version = "0.6.0" }
esp-wifi = { version = "0.4.0", features = [
    "esp32c3",
    "phy-enable-usb",
    "utils",
    "wifi-default",
    "async",
    "embassy-net",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }

embassy-executor = { version = "0.5.0", package = "embassy-executor", features = [
    "task-arena-size-12288",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0" }
static_cell = { version = "2.0", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
